--- a/index.html
+++ b/index.html
@@ -7,25 +7,41 @@
 </head>
 <body>
 	<header>
-			<div class="titulo"><p>Cocinamos negocios</p></div>	
+			<h1>Cocinamos negocios</h1>
 	</header>
-	<aside>
-	<div class="barraNavegacion">
-	<img src="imagenes/main/LOGO1001.png" class="logo">
-	<ul class="barraNavegacionul">
-		<div class="prue1"><li><img src="imagenes/main/Historia.png" height="50px" width="50px"> Nuestra historia</li></div>
-		<div class="prue2"><li><img src="imagenes/main/cocina.png" height="50px" width="50px"> Cocinamos <br> negocios</li></div>
-		<div class="prue3"><li><img src="imagenes/main/consultoria.png" height="50px" width="50px"> Consultoria</li></div>
-		<div class="prue4"><li><img src="imagenes/main/cliente.png" height="50px" width="50px"> Nuestros <br> clientes</li></div>
-		<div class="prue5"><li><img src="imagenes/main/contacto.png" height="50px" width="50px"> Contacto</li></div>
-	</div>
-	</ul>
-	</div>
-	</aside>
-	<div><img src="imagenes/main/WEB1.png" class="cocineros" width="30%" height="20%">
-	<img src="imagenes/main/WEB2001.png" class="cocinamos" width="39%" height="100%">
-	<img src="imagenes/main/WEB4001.png" class="consulta" width="30%" height="20%">
-	<img src="imagenes/main/WEB3001.png" class="contacto" width="30%" height="20%">
-	<img src="imagenes/main/WEB5001.png" class="nuestros" width="30%" height="20%"></div>
+	<nav>
+			<div class="barraNavegacion">
+				<img src="imagenes/main/LOGO1001.png" height="auto" width="100%">
+				<a href="#historia"><li><img src="imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
+				<li><img src="imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li>
+				<li><img src="imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li>
+				<li><img src="imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li>
+				<li><img src="imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li>
+				<li class="inicio"></li>
+			</div>
+	</nav>
+	<section class="fotos">
+			<div class="imagen1"></div>
+			<div class="imagen3"></div>
+			<div class="imagen2"></div>
+			<div class="imagen4"></div>
+	</section>
+	<a name="historia" id="historia"></a>
+	<section class="Nuestra">
+			<img src="imagenes/main/WEB2001.png" class="cocinamos">
+			<div><h2>Nuestra historia</h2>
+			<p>La gastronomía es uno de los pilares base de la economía. Día tras día van emergiendo nuevos restaurantes. Nuevos conceptos de ocio gastronómico. Salir a comer tapear o cenar, se ha convertido en una experiencia completa. A su vez el turismo gastronómico es un negocio emergente. Poco a poco vemos como van apareciendo nuevos servicios y propuestas que satisfacen la demanda del consumidor turista. • Es por ello que consideramos que la implantación en el mercado de una “Consultoría gastronómica” es fundamental para ayudar a como crear un restaurante, gestionarlo u organizar un evento.</p>
+			</div>
+	</section>
+	<section class="prueba">
+		<p>Lorem <br> ipsum dolor <br>jsbdsit amet, <br>jsbdconsectetu<br>jsbdr adipisicing e<br>jsbdlit, sed do<br>jsbd eiusmodkskskskl
+		tempor in<br>jsbdcididunt ut labore et<br>jsbd dolore magna aliqua. Ut <br>jsbdenim ad minim<br>jsbdveniam,kskskskl
+		quis <br>jsbdnostrud exerci<br>jsbdtation ullamco lab<br>jrbdoris n<br>jsbdisi ut aliquip ex ea commodokskskskl
+		conseq<br>jsbduat. Duis au<br>jsbdte irure dolor <br>jsbdin reksksksklprehenderit in vo<br>jsbdluptate velit essekskskskl
+		cillum d<br>jsbdolore eu fugiat <br>jsbdnulla <br>jsbdpariatur. Ex<br>jsbdcepteur sint occaecat c<br>jsbdupidatat nonkskskskl
+		proident, sunt <br>jsbdin culpa qui officia deseru<br>jsbdnt mollit<br>jsbd anim id est laborum.</p>kskskskl
+	</section>
+			
+		
 </body>
 </html>
