--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="UpMain.css">
 </head>
 <body>
+	<a name="inicio" id="inicio"></a>
 	<header>
-			<h1>Cocinamos negocios</h1>
+	<h1>Cocinamos negocios</h1><a href="html/UPEnglish.html"><img src="imagenes/main/inglés.png" class="inglés" height="auto" width="2.5%"></a>
 	</header>
 	<nav>
 			<div class="barraNavegacion">
-				<img src="imagenes/main/LOGO1001.png" height="auto" width="100%">
+				<a href="#inicio"><img src="imagenes/main/LOGO1001.png" height="auto" width="100%">
 				<a href="#historia"><li><img src="imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
-				<li><img src="imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li>
-				<li><img src="imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li>
-				<li><img src="imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li>
-				<li><img src="imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li>
-				<li class="inicio"></li>
+				<a href="#cocinamosNeg"><li><img src="imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
+				<a href="#consulink"><li><img src="imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
+				<a href="#clientes"><li><img src="imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li></a>
+				<a href="#contactolink"><li><img src="imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li>
+				<a href="#inicio"><li class="inicio"></li>
 			</div>
 	</nav>
 	<section class="fotos">
@@ -26,22 +27,68 @@
 			<div class="imagen2"></div>
 			<div class="imagen4"></div>
 	</section>
-	<a name="historia" id="historia"></a>
+	<a name="historia" id="historia">
 	<section class="Nuestra">
-			<img src="imagenes/main/WEB2001.png" class="cocinamos">
+			<img src="imagenes/main/WEB2001.png" class="izquierda">
 			<div><h2>Nuestra historia</h2>
 			<p>La gastronomía es uno de los pilares base de la economía. Día tras día van emergiendo nuevos restaurantes. Nuevos conceptos de ocio gastronómico. Salir a comer tapear o cenar, se ha convertido en una experiencia completa. A su vez el turismo gastronómico es un negocio emergente. Poco a poco vemos como van apareciendo nuevos servicios y propuestas que satisfacen la demanda del consumidor turista. • Es por ello que consideramos que la implantación en el mercado de una “Consultoría gastronómica” es fundamental para ayudar a como crear un restaurante, gestionarlo u organizar un evento.</p>
 			</div>
 	</section>
-	<section class="prueba">
-		<p>Lorem <br> ipsum dolor <br>jsbdsit amet, <br>jsbdconsectetu<br>jsbdr adipisicing e<br>jsbdlit, sed do<br>jsbd eiusmodkskskskl
-		tempor in<br>jsbdcididunt ut labore et<br>jsbd dolore magna aliqua. Ut <br>jsbdenim ad minim<br>jsbdveniam,kskskskl
-		quis <br>jsbdnostrud exerci<br>jsbdtation ullamco lab<br>jrbdoris n<br>jsbdisi ut aliquip ex ea commodokskskskl
-		conseq<br>jsbduat. Duis au<br>jsbdte irure dolor <br>jsbdin reksksksklprehenderit in vo<br>jsbdluptate velit essekskskskl
-		cillum d<br>jsbdolore eu fugiat <br>jsbdnulla <br>jsbdpariatur. Ex<br>jsbdcepteur sint occaecat c<br>jsbdupidatat nonkskskskl
-		proident, sunt <br>jsbdin culpa qui officia deseru<br>jsbdnt mollit<br>jsbd anim id est laborum.</p>kskskskl
+	</a>
+	<a name="cocinamosNeg" id="cocinamosNeg">
+	<section class="cocinamos">
+			<img src="imagenes/main/trato.jpg" height="auto" width="40%" class="derecha">
+			<div>
+				<h2>Cocinamos negocios</h2>
+				<p>
+					Te ayudamos a que tu empresa sea eficiente competitiva y
+					rentable <br>
+					Desarrollamos tu negocio gastronómico
+				</p>
+			</div>
 	</section>
+	</a>
+	<a name="consulink" id="consulink">
+	<section class="consultoria">
+		<img src="imagenes/main/grafica.jpg" height="auto" width="40%" class="izquierda">
+		<div>
+				<h2>Consultoria</h2>
+				<p>
+					Hemos creado el “Metodo Up” para ayudarte a desarrollar tu
+					negocio.
+				</p>
+			</div>
+	</section>
+	</a><a name="clientes" id="clientes">
+	<section class="marginNuestros">
+		<div class="NuestrosClientes"><h2>Nuestros clientes</h2></div>
+		<div class="contenedorColumnas">
+			<img src="imagenes/main/abdo.jpg" height="150px" width="200px"><h3>Abdo Boukhari</h3><p>Idea de negocio <br>“Obrador de Pastelería”</p>
+		</div>
+		<div class="contenedorColumnas">
+			<img src="imagenes/main/zayas.jpg"  height="150px" width="200px"><h3>Alvaro Cafetería Zayas</h3><p>“Propuesta de Servicio”</p>
 			
-		
+		</div>
+		<div class="contenedorColumnas">
+			<img src="imagenes/main/darwin.jpg" height="150px" width="200px"><h3>Bar Darwin</h3><p>Curso Formativo <br> de Eficiencia <br> en Costes Materias
+			Primas.</p>
+		</div>
+	</section>
+	</a><a name="contactolink" id="contactolink">
+	<section class="contacto">
+		<a href="html/form.html" class="form2"><h2>Contactanos!!!</h2></a>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5839861875183!2d-3.7886338846789043!3d40.44020986213515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41864d79984f01%3A0xa0aa87abbc9f14c3!2s%C3%81tica+-+Edificio+3!5e0!3m2!1ses!2ses!4v1558290825719!5m2!1ses!2ses" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</section>
+	</a>	
+	<footer class="foot">
+		<p>
+			<a href="https://www.instagram.com/solucionesup/?hl=es"><img src="imagenes/main/Insta.png"></a>
+			<a href="https://twitter.com/SolucionesUp"><img src="imagenes/main/twitter.png"></a>
+			<img src="imagenes/main/email.png"><br>
+			Twitter: @SolucionesUp
+			<br> Instagram: soluciones
+			<br> upsolucionesgastronómicas@gmail.com
+		</p>	
+	</footer>		
 </body>
 </html>
