--- a/html/UPEnglish.html
+++ b/html/UPEnglish.html
@@ -11,14 +11,15 @@
 	<h1>We cook business</h1>
 	</header>
 	<nav>
-			<div class="barraNavegacion">
+		<div class="botonBarra" id="botoncito"></div>
+			<div class="barraNavegacion" id="botonazo">
 				<a href="../index.html#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%"></a>
-				<a href="#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> Our <br> history</li></a>
+				<a href="#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> <br> Our history</li></a>
 				<a href="#cocinamosNeg"><li><img src="../imagenes/main/cocina.png" height="50%" width="50%"><br> we cook business</li></a>
 				<a href="#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultancy</li></a>
-				<a href="#clientes"><li><img src="../imagenes/main/cliente.png" height="50%" width="50%"> Our <br> customers</li></a>
-				<a href="#contactolink"><li><img src="../imagenes/main/contacto.png" height="50%" width="50%"> Contact</li>
-				<a href="#inicio"><li class="inicio"></li>
+				<a href="#clientes"><li><img src="../imagenes/main/cliente.png" height="50%" width="50%"> <br> Our customers</li></a>
+				<a href="#contactolink"><li><img src="../imagenes/main/contacto.png" height="50%" width="50%"> Contact</li></a>
+				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png"></li></a>
 			</div>
 	</nav>
 	<section class="fotos">
@@ -76,7 +77,7 @@
 	</section>
 	</a><a name="contactolink" id="contactolink">
 	<section class="contacto">
-		<a href="../html/form.html" class="form2"><h2>contact us!!!</h2></a>
+		<a href="../html/formEnglis.html" class="form2"><h2>contact us!!!</h2></a>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5839861875183!2d-3.7886338846789043!3d40.44020986213515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41864d79984f01%3A0xa0aa87abbc9f14c3!2s%C3%81tica+-+Edificio+3!5e0!3m2!1ses!2ses!4v1558290825719!5m2!1ses!2ses" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 	</a>	
@@ -89,6 +90,7 @@
 			<br> Instagram: soluciones
 			<br> upsolucionesgastronómicas@gmail.com
 		</p>	
-	</footer>		
+	</footer>
+	<script type="text/javascript" src="../JavaScript/UpMain.js"></script>		
 </body>
 </html>
