--- a/html/formEnglis.html
+++ b/html/formEnglis.html
@@ -8,12 +8,12 @@
 <body>
 <a name="inicio" id="inicio"></a>
 	<header>
-	<h1>Cocinamos negocios</h1><a href="../html/formEnglis.html"><img src="../imagenes/main/inglés.png" class="inglés" height="auto" width="2.5%"></a>
+	<h1>We cook business</h1>
 	</header>
 	<nav>
 		<div class="botonBarra" id="botoncito"></div>
 			<div class="barraNavegacion" id="botonazo">
-				<a href="#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%">
+				<a href="../index.html#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%"></a>
 				<a href="#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
 				<a href="#cocinamosNeg"><li><img src="../imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
 				<a href="#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
@@ -22,20 +22,21 @@
 				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png" height="50%" width="50%"></li></a>
 			</div>
 	</nav>
+
 	<section>
 		<form class="formulario">
-				Nombre <br>	
-				<input type="text" placeholder="Su nombre"> <br>	
-				Apellidos <br>	
-				<input type="text" placeholder="Sus apellidos"> <br>		
-				Correo electronico <br>	
-				<input type="email" placeholder="Su email"> <br>
-				Pregunta/Consejo <br>		
-				<input type="radio" value="Pregunta">Pregunta <br>	
-				<input type="radio" value="Consejo">Consejo <br> <br>
+				Name <br>	
+				<input type="text" placeholder="Your name"> <br>	
+				Surname <br>	
+				<input type="text" placeholder="Your Surname"> <br>		
+				Email <br>	
+				<input type="email" placeholder="Your email"> <br>
+				Ask/Advise <br>		
+				<input type="radio" value="Ask">Ask <br>	
+				<input type="radio" value="Advise">Advise <br> <br>
 				<textarea name="comentarios" rows="10" cols="40" placeholder="Escriba aqui"></textarea> <br> <br>
-				<input type="checkbox">	Suscribirme al boletin de novedades <br> <br>
-				<input type="submit" name="Borrar" value="Borrar los datos introducidos">	
+				<input type="checkbox">	Subscribe to our website <br> <br>
+				<input type="submit" name="Borrar" value="Delete all dates">	
 		</form>
 	</section>
 	<footer class="foot">
