--- a/index.html
+++ b/index.html
@@ -11,21 +11,48 @@
 	<h1>Cocinamos negocios</h1><a href="html/UPEnglish.html"><img src="imagenes/main/inglés.png" class="inglés" height="auto" width="2.5%"></a>
 	</header>
 	<nav>
-			<div class="barraNavegacion">
+		<div class="botonBarra" id="botoncito"></div>
+			<div class="barraNavegacion" id="botonazo">
 				<a href="#inicio"><img src="imagenes/main/LOGO1001.png" height="auto" width="100%">
 				<a href="#historia"><li><img src="imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
 				<a href="#cocinamosNeg"><li><img src="imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
 				<a href="#consulink"><li><img src="imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
 				<a href="#clientes"><li><img src="imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li></a>
-				<a href="#contactolink"><li><img src="imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li>
-				<a href="#inicio"><li class="inicio"></li>
+				<a href="#contactolink"><li><img src="imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li></a>
+				<a href="#inicio"><li class="inicio"><img src="imagenes/main/flecha.png" height="50%" width="50%"></li></a>
 			</div>
 	</nav>
 	<section class="fotos">
-			<div class="imagen1"></div>
-			<div class="imagen3"></div>
-			<div class="imagen2"></div>
-			<div class="imagen4"></div>
+			<div class="imagen1">
+				<div class="imagenText1">
+					<h2>Quienes somos </h2>
+					<p>Stephane Perez: Experimentado cocinero
+					al que le apasiona el trabajo bien hecho.</p>
+					<p>Maria de Luque: Joven y dinámica pondré en
+					valor la imagen de tu negocio.</p>
+					<p>Mario Rubio: Mis 20 años de experiencia en
+					el sector de la emergencia me ayudan a priorizar.</p>
+				</div>
+			</div>
+			<div class="imagen3">
+				<div class="imagenText3">
+					<h2>Nos gusta lo que hacemos</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				</div>
+			</div>
+			<a href="html/NuestrasRecetas.html"><div class="imagen2">
+				<div class="imagenText2">
+					<h2>Nuestras recetas</h2>
+					<p>Hecha un vistazo a nuestras recetas recomendadas</p>
+				</div>
+			</div></a>
+			<a href="html/NuestrosPostres.html"><div class="imagen4">
+				<div class="imagenText4">
+					<h2>Nuestros postres</h2>
+					<p>Si, tambien tenemos recetas de postres para los amantes de lo dulce</p>
+				</div>
+			</div></a>
 	</section>
 	<a name="historia" id="historia">
 	<section class="Nuestra">
@@ -89,6 +116,8 @@
 			<br> Instagram: soluciones
 			<br> upsolucionesgastronómicas@gmail.com
 		</p>	
-	</footer>		
+		<audio controls><source src="audio/Good_Starts.mp3" type="audio/mp3" class="audio"  height="20" width="20"></audio>
+	<script type="text/javascript" src="JavaScript/UpMain.js"></script>	
+	</footer>
 </body>
 </html>
