--- a/html/NuestrasRecetas.html
+++ b/html/NuestrasRecetas.html
@@ -13,7 +13,7 @@
 	<nav>
 		<div class="botonBarra" id="botoncito"></div>
 			<div class="barraNavegacion" id="botonazo">
-				<a href="#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%">
+				<a href="../index.html#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%">
 				<a href="#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
 				<a href="#cocinamosNeg"><li><img src="../imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
 				<a href="#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
@@ -22,5 +22,9 @@
 				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png" height="50%" width="50%"></li></a>
 			</div>
 	</nav>
+	<section class="video">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/eX5EVdGBAjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</section>
+		<script type="text/javascript" src="../JavaScript/UpMain.js"></script>	
 </body>
 </html>
