--- a/html/UPEnglish.html
+++ b/html/UPEnglish.html
@@ -19,14 +19,42 @@
 				<a href="#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultancy</li></a>
 				<a href="#clientes"><li><img src="../imagenes/main/cliente.png" height="50%" width="50%"> <br> Our customers</li></a>
 				<a href="#contactolink"><li><img src="../imagenes/main/contacto.png" height="50%" width="50%"> Contact</li></a>
-				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png"></li></a>
+				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png"  height="50%" width="50%"></li></a>
 			</div>
 	</nav>
 	<section class="fotos">
-			<div class="imagen1"></div>
-			<div class="imagen3"></div>
-			<div class="imagen2"></div>
-			<div class="imagen4"></div>
+			<div class="imagen1">
+				<div class="imagenText1">
+					<h2>About us </h2>
+					<p>Stephane Perez: I am an experienced chef who is
+pasionate with a well done work.</p>
+					<p>Maria de Luque: I am dinamic and young I will
+put in value the image of your business.</p>
+					<p>Mario Rubio: My twenty years of experience in
+the emergency sector help me to priotize.</p>
+				</div>
+			</div>
+			<div class="imagen3">
+				<div class="imagenText3">
+					<h2>We like what we do</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				</div>
+			</div>
+			<a href="../Xml/Recetas.xml"><div class="imagen2">
+				<div class="imagenText2">
+					<h2>Our recipes</h2>
+					<p>Take a look at our recommended recipes
+</p>
+				</div>
+			</div></a>
+			<a href="../Xml/Postres.xml"><div class="imagen4">
+				<div class="imagenText4">
+					<h2>Our desserts</h2>
+					<p>Yes, we also have dessert recipes for sweet lovers
+</p>
+				</div>
+			</div></a>
 	</section>
 	<a name="historia" id="historia">
 	<section class="Nuestra">
