--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</div>
 			</div>
-			<a href="html/NuestrasRecetas.html"><div class="imagen2">
+			<a href="Xml/Recetas.xml"><div class="imagen2">
 				<div class="imagenText2">
 					<h2>Nuestras recetas</h2>
 					<p>Hecha un vistazo a nuestras recetas recomendadas</p>
 				</div>
 			</div></a>
-			<a href="html/NuestrosPostres.html"><div class="imagen4">
+			<a href="Xml/Postres.xml"><div class="imagen4">
 				<div class="imagenText4">
 					<h2>Nuestros postres</h2>
 					<p>Si, tambien tenemos recetas de postres para los amantes de lo dulce</p>
