--- a/html/form.html
+++ b/html/form.html
@@ -13,13 +13,12 @@
 	<nav>
 		<div class="botonBarra" id="botoncito"></div>
 			<div class="barraNavegacion" id="botonazo">
-				<a href="#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%">
-				<a href="#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
-				<a href="#cocinamosNeg"><li><img src="../imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
-				<a href="#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
-				<a href="#clientes"><li><img src="../imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li></a>
-				<a href="#contactolink"><li><img src="../imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li></a>
-				<a href="#inicio"><li class="inicio"><img src="../imagenes/main/flecha.png" height="50%" width="50%"></li></a>
+				<a href="../index.html#inicio"><img src="../imagenes/main/LOGO1001.png" height="auto" width="100%">
+				<a href="../index.html#historia"><li><img src="../imagenes/main/Historia.png" height="50%" width="50%"> Nuestra <br> historia</li></a>
+				<a href="../index.html#cocinamosNeg"><li><img src="../imagenes/main/cocina.png" height="50%" width="50%"> Cocinamos <br> negocios</li></a>
+				<a href="../index.html#consulink"><li><img src="../imagenes/main/consultoria.png" height="50%" width="50%"> Consultoria</li></a>
+				<a href="../index.html#clientes"><li><img src="../imagenes/main/cliente.png" height="50%" width="50%"> Nuestros <br> clientes</li></a>
+				<a href="../index.html#contactolink"><li><img src="../imagenes/main/contacto.png" height="50%" width="50%"> Contacto</li></a>
 			</div>
 	</nav>
 	<section>
