--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 			</div>
 			<div class="imagen3">
 				<div class="imagenText3">
-					<h2>Nos gusta lo que hacemos</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+					<p id="horario"></p>
 				</div>
 			</div>
 			<a href="Xml/Recetas.xml"><div class="imagen2">
@@ -118,6 +116,7 @@
 		</p>	
 		<audio controls><source src="audio/Good_Starts.mp3" type="audio/mp3" class="audio"  height="20" width="20"></audio>
 	<script type="text/javascript" src="JavaScript/UpMain.js"></script>	
+	<script type="text/javascript" src="JavaScript/Horario.js"></script>
 	</footer>
 </body>
 </html>
